[package]
name = "one_billion_rows_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-chunker = "0.1.1"
scoped_threadpool = "0.1.9"
num_cpus = "1.16.0"
clap = "4.5.4"
clap_derive = "4.5.4"